Add missing AltGr mapping in windowsKeyCodeForQtKey

Unknown windows_key_codes are calculated from
native key codes, breaking any remapping.
Although it is named windows_key_code it is used
on other platforms too.

Fixes: QTBUG-115844
Change-Id: I53956fd6c18a6b85afe97b82696ba4f49618008c
Reviewed-by: Peter Varga <pvarga@inf.u-szeged.hu>
Reviewed-by: Michal Klocek <michal.klocek@qt.io>
(cherry picked from commit 888afe6d733115c04d28cbc348a5c26ddd77d233)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>